# nestopia

./: .gitignore
source/: CMakeLists.txt  main.cc
source/core/: CMakeLists.txt  NstCore.hpp
